--- a/UCAS_01/UCAS_01/Base.lproj/Main.storyboard
+++ b/UCAS_01/UCAS_01/Base.lproj/Main.storyboard
@@ -18,13 +18,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="xXR-QM-tAb">
-                                <rect key="frame" x="166" y="279" width="42" height="254"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="1" green="0.22980154506735884" blue="0.2183932260671384" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="llL-Xb-gG5">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="778"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="llL-Xb-gG5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="1Re-Ti-AzU"/>
+                            <constraint firstItem="llL-Xb-gG5" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Vne-cY-yed"/>
+                            <constraint firstItem="llL-Xb-gG5" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="tbW-Wk-Cie"/>
+                            <constraint firstItem="llL-Xb-gG5" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="uCr-YZ-zS9"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
